Compress exception messages spread out over lots of lines