@@ -260,6 +260,14 @@ public final class PainlessLookupBuilder {
         addPainlessClass(clazz, annotations);
     }
 
+    private static IllegalArgumentException lookupException(String formatText, Object... args) {
+        return new IllegalArgumentException(String.format(formatText, args));
+    }
+
+    private static IllegalArgumentException lookupException(Throwable cause, String formatText, Object... args) {
+        return new IllegalArgumentException(String.format(formatText, args), cause);
+    }
+
     public void addPainlessClass(Class<?> clazz, Map<Class<?>, Object> annotations) {
         Objects.requireNonNull(clazz);
         Objects.requireNonNull(annotations);
@@ -283,23 +291,15 @@ public final class PainlessLookupBuilder {
         if (existingClass == null) {
             javaClassNamesToClasses.put(clazz.getName().intern(), clazz);
         } else if (existingClass != clazz) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + canonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
-            );
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders", canonicalClassName);
         }
 
         existingClass = canonicalClassNamesToClasses.get(canonicalClassName);
 
         if (existingClass != null && existingClass != clazz) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + canonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
-            );
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders", canonicalClassName);
         }
 
         PainlessClassBuilder existingPainlessClassBuilder = classesToPainlessClassBuilders.get(clazz);
@@ -333,23 +333,15 @@ public final class PainlessLookupBuilder {
                     if (annotations.get(AliasAnnotation.class)instanceof AliasAnnotation alias) {
                         Class<?> existing = canonicalClassNamesToClasses.put(alias.alias(), clazz);
                         if (existing != null) {
-                            throw new IllegalArgumentException(
-                                "Cannot add alias [" + alias.alias() + "] for [" + clazz + "] that shadows class [" + existing + "]"
-                            );
+                            throw lookupException(
+                                "Cannot add alias [%s] for [%s] that shadows class [%s]", alias.alias(), clazz, existing);
                         }
                     }
                 }
             } else if (importedClass != clazz) {
-                throw new IllegalArgumentException(
-                    "imported class ["
-                        + importedCanonicalClassName
-                        + "] cannot represent multiple "
-                        + "classes ["
-                        + canonicalClassName
-                        + "] and ["
-                        + typeToCanonicalTypeName(importedClass)
-                        + "]"
-                );
+                throw lookupException(
+                    "imported class [%s] cannot represent multiple classes [%s] and [%s]",
+                    importedCanonicalClassName, canonicalClassName, typeToCanonicalTypeName(importedClass));
             } else if (importClassName == false) {
                 throw new IllegalArgumentException("inconsistent no_import parameter found for class [" + canonicalClassName + "]");
             }
@@ -367,16 +359,9 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = canonicalClassNamesToClasses.get(targetCanonicalClassName);
 
         if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found"
-                    + "for constructor [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
-            );
+            throw lookupException(
+                "target class [%s] not found for constructor [[%s], %s]",
+                targetCanonicalClassName, targetCanonicalClassName, canonicalTypeNameParameters);
         }
 
         List<Class<?>> typeParameters = new ArrayList<>(canonicalTypeNameParameters.size());
@@ -385,16 +370,9 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found "
-                        + "for constructor [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for constructor [[%s], %s]",
+                    canonicalTypeNameParameter, targetCanonicalClassName, canonicalTypeNameParameters);
             }
 
             typeParameters.add(typeParameter);
@@ -415,16 +393,9 @@ public final class PainlessLookupBuilder {
         PainlessClassBuilder painlessClassBuilder = classesToPainlessClassBuilders.get(targetClass);
 
         if (painlessClassBuilder == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found"
-                    + "for constructor [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "target class [%s] not found for constructor [[%s], %s]",
+                targetCanonicalClassName, targetCanonicalClassName, typesToCanonicalTypeNames(typeParameters));
         }
 
         int typeParametersSize = typeParameters.size();
@@ -432,16 +403,9 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for constructor [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for constructor [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter), targetCanonicalClassName, typesToCanonicalTypeNames(typeParameters));
             }
 
             javaTypeParameters.add(typeToJavaType(typeParameter));
@@ -452,15 +416,9 @@ public final class PainlessLookupBuilder {
         try {
             javaConstructor = targetClass.getConstructor(javaTypeParameters.toArray(Class<?>[]::new));
         } catch (NoSuchMethodException nsme) {
-            throw new IllegalArgumentException(
-                "reflection object not found for constructor "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]",
-                nsme
-            );
+            throw lookupException(nsme,
+                "reflection object not found for constructor [[%s], %s]",
+                targetCanonicalClassName, typesToCanonicalTypeNames(typeParameters));
         }
 
         MethodHandle methodHandle;
@@ -468,15 +426,9 @@ public final class PainlessLookupBuilder {
         try {
             methodHandle = lookup(targetClass).unreflectConstructor(javaConstructor);
         } catch (IllegalAccessException iae) {
-            throw new IllegalArgumentException(
-                "method handle not found for constructor "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]",
-                iae
-            );
+            throw lookupException(iae,
+                "method handle not found for constructor [[%s], %s]",
+                targetCanonicalClassName, typesToCanonicalTypeNames(typeParameters));
         }
 
         if (annotations.containsKey(CompileTimeOnlyAnnotation.class)) {
@@ -499,19 +451,10 @@ public final class PainlessLookupBuilder {
             newPainlessConstructor = painlessConstructorCache.computeIfAbsent(newPainlessConstructor, Function.identity());
             painlessClassBuilder.constructors.put(painlessConstructorKey.intern(), newPainlessConstructor);
         } else if (newPainlessConstructor.equals(existingPainlessConstructor) == false) {
-            throw new IllegalArgumentException(
-                "cannot add constructors with the same arity but are not equivalent for constructors "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessConstructor.typeParameters())
-                    + "]"
-            );
+            throw lookupException(
+                "cannot add constructors with the same arity but are not equivalent for constructors [[%s], %s] and [[%s], %s]",
+                targetCanonicalClassName, typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName, typesToCanonicalTypeNames(existingPainlessConstructor.typeParameters()));
         }
     }
 
@@ -535,18 +478,9 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = canonicalClassNamesToClasses.get(targetCanonicalClassName);
 
         if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
-            );
+            throw lookupException(
+                "target class [%s] not found for method [[%s], [%s], %s]",
+                targetCanonicalClassName, targetCanonicalClassName, methodName, canonicalTypeNameParameters);
         }
 
         Class<?> augmentedClass = null;
@@ -555,16 +489,9 @@ public final class PainlessLookupBuilder {
             augmentedClass = loadClass(
                 classLoader,
                 augmentedCanonicalClassName,
-                () -> "augmented class ["
-                    + augmentedCanonicalClassName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
+                () -> String.format(
+                    "augmented class [%s] not found for method [[%s], [%s], %s]",
+                    augmentedCanonicalClassName, targetCanonicalClassName, methodName, canonicalTypeNameParameters)
             );
         }
 
@@ -574,18 +501,9 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for method "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for method [[%s], [%s], %s]",
+                    canonicalTypeNameParameter, targetCanonicalClassName, methodName, canonicalTypeNameParameters);
             }
 
             typeParameters.add(typeParameter);
@@ -594,18 +512,9 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] not found for method [[%s], [%s], %s]",
+                returnCanonicalTypeName, targetCanonicalClassName, methodName, canonicalTypeNameParameters);
         }
 
         addPainlessMethod(targetClass, augmentedClass, methodName, returnType, typeParameters, annotations);
@@ -641,18 +550,9 @@ public final class PainlessLookupBuilder {
         PainlessClassBuilder painlessClassBuilder = classesToPainlessClassBuilders.get(targetClass);
 
         if (painlessClassBuilder == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "target class [%s] not found for method [[%s], [%s], %s]",
+                targetCanonicalClassName, targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         int typeParametersSize = typeParameters.size();
@@ -665,36 +565,19 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "not found for method [["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for method [[%s], [%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
             }
 
             javaTypeParameters.add(typeToJavaType(typeParameter));
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] not found for method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType), targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         Method javaMethod;
@@ -703,51 +586,25 @@ public final class PainlessLookupBuilder {
             try {
                 javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(Class<?>[]::new));
             } catch (NoSuchMethodException nsme) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for method [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + "["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]",
-                    nsme
-                );
+                throw lookupException(nsme,
+                    "reflection object not found for method [[%s], [%s], %s]",
+                    targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
             }
         } else {
             try {
                 javaMethod = augmentedClass.getMethod(methodName, javaTypeParameters.toArray(Class<?>[]::new));
 
                 if (Modifier.isStatic(javaMethod.getModifiers()) == false) {
-                    throw new IllegalArgumentException(
-                        "method [["
-                            + targetCanonicalClassName
-                            + "], ["
-                            + methodName
-                            + "], "
-                            + typesToCanonicalTypeNames(typeParameters)
-                            + "] with augmented class "
-                            + "["
-                            + typeToCanonicalTypeName(augmentedClass)
-                            + "] must be static"
-                    );
+                    throw lookupException(
+                        "method [[%s], [%s], %s] with augmented class [%s] must be static",
+                        targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters),
+                        typeToCanonicalTypeName(augmentedClass));
                 }
             } catch (NoSuchMethodException nsme) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for method "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "] "
-                        + "with augmented class ["
-                        + typeToCanonicalTypeName(augmentedClass)
-                        + "]",
-                    nsme
-                );
+                throw lookupException(nsme,
+                    "reflection object not found for method [[%s], [%s], %s] with augmented class [%s]",
+                    targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters),
+                    typeToCanonicalTypeName(augmentedClass));
             }
         }
 
@@ -764,21 +621,10 @@ public final class PainlessLookupBuilder {
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for method [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()), typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         MethodHandle methodHandle;
@@ -787,39 +633,18 @@ public final class PainlessLookupBuilder {
             try {
                 methodHandle = lookup(targetClass).unreflect(javaMethod);
             } catch (IllegalAccessException iae) {
-                throw new IllegalArgumentException(
-                    "method handle not found for method "
-                        + "[["
-                        + targetClass.getCanonicalName()
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "], "
-                        + "with lookup ["
-                        + lookup(targetClass)
-                        + "]",
-                    iae
-                );
+                throw lookupException(iae,
+                    "method handle not found for method [[%s], [%s], %s], with lookup [%s]",
+                    targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters), lookup(targetClass));
             }
         } else {
             try {
                 methodHandle = lookup(augmentedClass).unreflect(javaMethod);
             } catch (IllegalAccessException iae) {
-                throw new IllegalArgumentException(
-                    "method handle not found for method "
-                        + "[["
-                        + targetClass.getCanonicalName()
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                        + "with augmented class ["
-                        + typeToCanonicalTypeName(augmentedClass)
-                        + "]",
-                    iae
-                );
+                throw lookupException(iae,
+                    "method handle not found for method [[%s], [%s], %s] with augmented class [%s]",
+                    targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters),
+                    typeToCanonicalTypeName(augmentedClass));
             }
         }
 
@@ -852,29 +677,12 @@ public final class PainlessLookupBuilder {
                 painlessClassBuilder.methods.put(painlessMethodKey.intern(), newPainlessMethod);
             }
         } else if (newPainlessMethod.equals(existingPainlessMethod) == false) {
-            throw new IllegalArgumentException(
+            throw lookupException(
                 "cannot add methods with the same name and arity but are not equivalent for methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingPainlessMethod.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessMethod.typeParameters())
-                    + "]"
-            );
+                    + "[[%s], [%s], [%s], %s] and [[%s], [%s], [%s], %s]",
+                targetCanonicalClassName, methodName, typeToCanonicalTypeName(returnType), typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName, methodName, typeToCanonicalTypeName(existingPainlessMethod.returnType()),
+                typesToCanonicalTypeNames(existingPainlessMethod.typeParameters()));
         }
     }
 
@@ -895,18 +703,9 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = canonicalClassNamesToClasses.get(targetCanonicalClassName);
 
         if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "], ["
-                    + canonicalTypeNameParameter
-                    + "]]"
-            );
+            throw lookupException(
+                "target class [%s] not found for field [[%s], [%s], [%s]]",
+                targetCanonicalClassName, targetCanonicalClassName, fieldName, canonicalTypeNameParameter);
         }
 
         String augmentedCanonicalClassName = annotations.containsKey(AugmentedAnnotation.class)
@@ -919,30 +718,18 @@ public final class PainlessLookupBuilder {
             augmentedClass = loadClass(
                 classLoader,
                 augmentedCanonicalClassName,
-                () -> "augmented class ["
-                    + augmentedCanonicalClassName
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "]"
+                () -> String.format(
+                    "augmented class [%s] not found for field [[%s], [%s]",
+                    augmentedCanonicalClassName, targetCanonicalClassName, fieldName)
             );
         }
 
         Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
         if (typeParameter == null) {
-            throw new IllegalArgumentException(
-                "type parameter ["
-                    + canonicalTypeNameParameter
-                    + "] not found "
-                    + "for field [["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "]"
-            );
+            throw lookupException(
+                "type parameter [%s] not found for field [[%s], [%s]",
+                canonicalTypeNameParameter, targetCanonicalClassName, fieldName);
         }
 
         addPainlessField(targetClass, augmentedClass, fieldName, typeParameter, annotations);
@@ -976,33 +763,15 @@ public final class PainlessLookupBuilder {
         PainlessClassBuilder painlessClassBuilder = classesToPainlessClassBuilders.get(targetClass);
 
         if (painlessClassBuilder == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "], ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "]]"
-            );
+            throw lookupException(
+                "target class [%s] not found for field [[%s], [%s], [%s]]",
+                targetCanonicalClassName, targetCanonicalClassName, fieldName, typeToCanonicalTypeName(typeParameter));
         }
 
         if (isValidType(typeParameter) == false) {
-            throw new IllegalArgumentException(
-                "type parameter ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "] not found for field "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "], ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "]]"
-            );
+            throw lookupException(
+                "type parameter [%s] not found for field [[%s], [%s], [%s]]",
+                typeToCanonicalTypeName(typeParameter), targetCanonicalClassName, fieldName, typeToCanonicalTypeName(typeParameter));
         }
 
         Field javaField;
@@ -1011,66 +780,30 @@ public final class PainlessLookupBuilder {
             try {
                 javaField = targetClass.getField(fieldName);
             } catch (NoSuchFieldException nsfe) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for field "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "]]",
-                    nsfe
-                );
+                throw lookupException(nsfe,
+                    "reflection object not found for field [[%s], [%s], [%s]]",
+                    targetCanonicalClassName, fieldName, typeToCanonicalTypeName(typeParameter));
             }
         } else {
             try {
                 javaField = augmentedClass.getField(fieldName);
 
                 if (Modifier.isStatic(javaField.getModifiers()) == false || Modifier.isFinal(javaField.getModifiers()) == false) {
-                    throw new IllegalArgumentException(
-                        "field [["
-                            + targetCanonicalClassName
-                            + "], ["
-                            + fieldName
-                            + "] "
-                            + "with augmented class ["
-                            + typeToCanonicalTypeName(augmentedClass)
-                            + "] must be static and final"
-                    );
+                    throw lookupException(
+                        "field [[%s], [%s] with augmented class [%s] must be static and final",
+                        targetCanonicalClassName, fieldName, typeToCanonicalTypeName(augmentedClass));
                 }
             } catch (NoSuchFieldException nsfe) {
-                throw new IllegalArgumentException(
-                    "reflection object not found for field "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "]]"
-                        + "with augmented class ["
-                        + typeToCanonicalTypeName(augmentedClass)
-                        + "]",
-                    nsfe
-                );
+                throw lookupException(nsfe,
+                    "reflection object not found for field [[%s], [%s], [%s]]with augmented class [%s]",
+                    targetCanonicalClassName, fieldName, typeToCanonicalTypeName(typeParameter), typeToCanonicalTypeName(augmentedClass));
             }
         }
 
         if (javaField.getType() != typeToJavaType(typeParameter)) {
-            throw new IllegalArgumentException(
-                "type parameter ["
-                    + typeToCanonicalTypeName(javaField.getType())
-                    + "] "
-                    + "does not match the specified type parameter ["
-                    + typeToCanonicalTypeName(typeParameter)
-                    + "] "
-                    + "for field [["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + fieldName
-                    + "]"
-            );
+            throw lookupException(
+                "type parameter [%s] does not match the specified type parameter [%s] for field [[%s], [%s]",
+                typeToCanonicalTypeName(javaField.getType()), typeToCanonicalTypeName(typeParameter), targetCanonicalClassName, fieldName);
         }
 
         MethodHandle methodHandleGetter;
@@ -1094,27 +827,15 @@ public final class PainlessLookupBuilder {
             PainlessField newPainlessField = new PainlessField(javaField, typeParameter, annotations, methodHandleGetter, null);
 
             if (existingPainlessField == null) {
-                newPainlessField = painlessFieldCache.computeIfAbsent(newPainlessField, key -> key);
+                newPainlessField = painlessFieldCache.computeIfAbsent(newPainlessField, Function.identity());
                 painlessClassBuilder.staticFields.put(painlessFieldKey.intern(), newPainlessField);
             } else if (newPainlessField.equals(existingPainlessField) == false) {
-                throw new IllegalArgumentException(
-                    "cannot add fields with the same name but are not equivalent for fields "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] and "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + existingPainlessField.javaField().getName()
-                        + "], "
-                        + typeToCanonicalTypeName(existingPainlessField.typeParameter())
-                        + "] "
-                        + "with the same name and different type parameters"
-                );
+                throw lookupException(
+                    "cannot add fields with the same name but are not equivalent for fields [[%s], [%s], [%s] and [[%s], [%s], %s]"
+                        + " with the same name and different type parameters",
+                    targetCanonicalClassName, fieldName, typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName, existingPainlessField.javaField().getName(),
+                    typeToCanonicalTypeName(existingPainlessField.typeParameter()));
             }
         } else {
             MethodHandle methodHandleSetter;
@@ -1140,24 +861,12 @@ public final class PainlessLookupBuilder {
                 newPainlessField = painlessFieldCache.computeIfAbsent(newPainlessField, key -> key);
                 painlessClassBuilder.fields.put(painlessFieldKey.intern(), newPainlessField);
             } else if (newPainlessField.equals(existingPainlessField) == false) {
-                throw new IllegalArgumentException(
-                    "cannot add fields with the same name but are not equivalent for fields "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + fieldName
-                        + "], ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] and "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + existingPainlessField.javaField().getName()
-                        + "], "
-                        + typeToCanonicalTypeName(existingPainlessField.typeParameter())
-                        + "] "
-                        + "with the same name and different type parameters"
-                );
+                throw lookupException(
+                    "cannot add fields with the same name but are not equivalent for fields [[%s], [%s], [%s] and [[%s], [%s], %s]" +
+                        " with the same name and different type parameters",
+                    targetCanonicalClassName, fieldName, typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName, existingPainlessField.javaField().getName(),
+                    typeToCanonicalTypeName(existingPainlessField.typeParameter()));
             }
         }
     }
@@ -1180,39 +889,15 @@ public final class PainlessLookupBuilder {
         Class<?> targetClass = loadClass(classLoader, targetJavaClassName, () -> "class [" + targetJavaClassName + "] not found");
         String targetCanonicalClassName = typeToCanonicalTypeName(targetClass);
 
-        if (targetClass == null) {
-            throw new IllegalArgumentException(
-                "target class ["
-                    + targetCanonicalClassName
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
-            );
-        }
-
         List<Class<?>> typeParameters = new ArrayList<>(canonicalTypeNameParameters.size());
 
         for (String canonicalTypeNameParameter : canonicalTypeNameParameters) {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for imported method "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for imported method [[%s], [%s], %s]",
+                    canonicalTypeNameParameter, targetCanonicalClassName, methodName, canonicalTypeNameParameters);
             }
 
             typeParameters.add(typeParameter);
@@ -1221,18 +906,9 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] not found for imported method [[%s], [%s], %s]",
+                returnCanonicalTypeName, targetCanonicalClassName, methodName, canonicalTypeNameParameters);
         }
 
         addImportedPainlessMethod(targetClass, methodName, returnType, typeParameters, annotations);
@@ -1260,12 +936,9 @@ public final class PainlessLookupBuilder {
         if (existingTargetClass == null) {
             javaClassNamesToClasses.put(targetClass.getName().intern(), targetClass);
         } else if (existingTargetClass != targetClass) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + targetCanonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
-            );
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                targetCanonicalClassName);
         }
 
         if (METHOD_NAME_PATTERN.matcher(methodName).matches() == false) {
@@ -1279,36 +952,19 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "not found for imported method [["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for imported method [[%s], [%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
             }
 
             javaTypeParameters.add(typeToJavaType(typeParameter));
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] not found for imported method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType), targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         Method javaMethod;
@@ -1316,47 +972,22 @@ public final class PainlessLookupBuilder {
         try {
             javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(new Class<?>[typeParametersSize]));
         } catch (NoSuchMethodException nsme) {
-            throw new IllegalArgumentException(
-                "imported method reflection object [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] not found",
-                nsme
-            );
+            throw lookupException(nsme,
+                "imported method reflection object [[%s], [%s], %s] not found",
+                targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for imported method [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for imported method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()), typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         if (Modifier.isStatic(javaMethod.getModifiers()) == false) {
-            throw new IllegalArgumentException(
-                "imported method [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] must be static"
-            );
+            throw lookupException(
+                "imported method [[%s], [%s], %s] must be static",
+                targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         String painlessMethodKey = buildPainlessMethodKey(methodName, typeParametersSize);
@@ -1374,17 +1005,9 @@ public final class PainlessLookupBuilder {
         try {
             methodHandle = lookup(targetClass).unreflect(javaMethod);
         } catch (IllegalAccessException iae) {
-            throw new IllegalArgumentException(
-                "imported method handle [["
-                    + targetClass.getCanonicalName()
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] not found",
-                iae
-            );
+            throw lookupException(iae,
+                "imported method handle [[%s], [%s], %s] not found",
+                targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         MethodType methodType = methodHandle.type();
@@ -1404,30 +1027,12 @@ public final class PainlessLookupBuilder {
             newImportedPainlessMethod = painlessMethodCache.computeIfAbsent(newImportedPainlessMethod, key -> key);
             painlessMethodKeysToImportedPainlessMethods.put(painlessMethodKey.intern(), newImportedPainlessMethod);
         } else if (newImportedPainlessMethod.equals(existingImportedPainlessMethod) == false) {
-            throw new IllegalArgumentException(
-                "cannot add imported methods with the same name and arity "
-                    + "but do not have equivalent methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingImportedPainlessMethod.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingImportedPainlessMethod.typeParameters())
-                    + "]"
-            );
+            throw lookupException(
+                "cannot add imported methods with the same name and arity but do not have equivalent methods "
+                    + "[[%s], [%s], [%s], %s] and [[%s], [%s], [%s], %s]",
+                targetCanonicalClassName, methodName, typeToCanonicalTypeName(returnType), typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName, methodName, typeToCanonicalTypeName(existingImportedPainlessMethod.returnType()),
+                typesToCanonicalTypeNames(existingImportedPainlessMethod.typeParameters()));
         }
     }
 
@@ -1454,18 +1059,9 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for class binding "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], [%s], %s]",
+                    canonicalTypeNameParameter, targetCanonicalClassName, methodName, canonicalTypeNameParameters);
             }
 
             typeParameters.add(typeParameter);
@@ -1474,18 +1070,9 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for class binding "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] not found for class binding [[%s], [%s], %s]",
+                returnCanonicalTypeName, targetCanonicalClassName, methodName, canonicalTypeNameParameters);
         }
 
         addPainlessClassBinding(targetClass, methodName, returnType, typeParameters, annotations);
@@ -1513,12 +1100,9 @@ public final class PainlessLookupBuilder {
         if (existingTargetClass == null) {
             javaClassNamesToClasses.put(targetClass.getName().intern(), targetClass);
         } else if (existingTargetClass != targetClass) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + targetCanonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
-            );
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                targetCanonicalClassName);
         }
 
         Constructor<?>[] javaConstructors = targetClass.getConstructors();
@@ -1546,47 +1130,24 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = typeParameters.get(typeParameterIndex);
 
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter), targetCanonicalClassName, typesToCanonicalTypeNames(typeParameters));
             }
 
             Class<?> javaTypeParameter = constructorParameterTypes[typeParameterIndex];
 
             if (isValidType(javaTypeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter), targetCanonicalClassName, typesToCanonicalTypeNames(typeParameters));
             }
 
             if (javaTypeParameter != typeToJavaType(typeParameter)) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(javaTypeParameter)
-                        + "] "
-                        + "does not match the specified type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "for class binding [["
-                        + targetClass.getCanonicalName()
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] does not match the specified type parameter [%s] for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(javaTypeParameter), typeToCanonicalTypeName(typeParameter),
+                    targetClass.getCanonicalName(), typesToCanonicalTypeNames(typeParameters));
             }
         }
 
@@ -1623,81 +1184,38 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = typeParameters.get(constructorParameterTypes.length + typeParameterIndex);
 
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter), targetCanonicalClassName, typesToCanonicalTypeNames(typeParameters));
             }
 
             Class<?> javaTypeParameter = javaMethod.getParameterTypes()[typeParameterIndex];
 
             if (isValidType(javaTypeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] not found "
-                        + "for class binding [["
-                        + targetCanonicalClassName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(typeParameter), targetCanonicalClassName, typesToCanonicalTypeNames(typeParameters));
             }
 
             if (javaTypeParameter != typeToJavaType(typeParameter)) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(javaTypeParameter)
-                        + "] "
-                        + "does not match the specified type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "for class binding [["
-                        + targetClass.getCanonicalName()
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] does not match the specified type parameter [%s] for class binding [[%s], %s]",
+                    typeToCanonicalTypeName(javaTypeParameter), typeToCanonicalTypeName(typeParameter),
+                    targetClass.getCanonicalName(), typesToCanonicalTypeNames(typeParameters));
             }
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for class binding "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] not found for class binding [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType), targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for class binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for class binding [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()), typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         String painlessMethodKey = buildPainlessMethodKey(methodName, constructorParameterTypes.length + methodParameterTypes.length);
@@ -1711,15 +1229,9 @@ public final class PainlessLookupBuilder {
         }
 
         if (Modifier.isStatic(javaMethod.getModifiers())) {
-            throw new IllegalArgumentException(
-                "class binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] cannot be static"
-            );
+            throw lookupException(
+                "class binding [[%s], [%s], %s] cannot be static",
+                targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         PainlessClassBinding existingPainlessClassBinding = painlessMethodKeysToPainlessClassBindings.get(painlessMethodKey);
@@ -1735,32 +1247,12 @@ public final class PainlessLookupBuilder {
             newPainlessClassBinding = painlessClassBindingCache.computeIfAbsent(newPainlessClassBinding, Function.identity());
             painlessMethodKeysToPainlessClassBindings.put(painlessMethodKey.intern(), newPainlessClassBinding);
         } else if (newPainlessClassBinding.equals(existingPainlessClassBinding) == false) {
-            throw new IllegalArgumentException(
-                "cannot add class bindings with the same name and arity "
-                    + "but do not have equivalent methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingPainlessClassBinding.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessClassBinding.typeParameters())
-                    + "]"
-            );
+            throw lookupException(
+                "cannot add class bindings with the same name and arity but do not have equivalent methods "
+                    + "[[%s], [%s], [%s], %s] and [[%s], [%s], [%s], %s]",
+                targetCanonicalClassName, methodName, typeToCanonicalTypeName(returnType), typesToCanonicalTypeNames(typeParameters),
+                targetCanonicalClassName, methodName, typeToCanonicalTypeName(existingPainlessClassBinding.returnType()),
+                typesToCanonicalTypeNames(existingPainlessClassBinding.typeParameters()));
         }
     }
 
@@ -1785,18 +1277,9 @@ public final class PainlessLookupBuilder {
             Class<?> typeParameter = canonicalTypeNameToType(canonicalTypeNameParameter);
 
             if (typeParameter == null) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + canonicalTypeNameParameter
-                        + "] not found for instance binding "
-                        + "[["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + canonicalTypeNameParameters
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for instance binding [[%s], [%s], %s]",
+                    canonicalTypeNameParameter, targetCanonicalClassName, methodName, canonicalTypeNameParameters);
             }
 
             typeParameters.add(typeParameter);
@@ -1805,18 +1288,9 @@ public final class PainlessLookupBuilder {
         Class<?> returnType = canonicalTypeNameToType(returnCanonicalTypeName);
 
         if (returnType == null) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + returnCanonicalTypeName
-                    + "] not found for class binding "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + canonicalTypeNameParameters
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] not found for class binding [[%s], [%s], %s]",
+                returnCanonicalTypeName, targetCanonicalClassName, methodName, canonicalTypeNameParameters);
         }
 
         addPainlessInstanceBinding(targetInstance, methodName, returnType, typeParameters, painlessAnnotations);
@@ -1846,12 +1320,9 @@ public final class PainlessLookupBuilder {
         if (existingTargetClass == null) {
             javaClassNamesToClasses.put(targetClass.getName().intern(), targetClass);
         } else if (existingTargetClass != targetClass) {
-            throw new IllegalArgumentException(
-                "class ["
-                    + targetCanonicalClassName
-                    + "] "
-                    + "cannot represent multiple java classes with the same name from different class loaders"
-            );
+            throw lookupException(
+                "class [%s] cannot represent multiple java classes with the same name from different class loaders",
+                targetCanonicalClassName);
         }
 
         if (METHOD_NAME_PATTERN.matcher(methodName).matches() == false) {
@@ -1865,36 +1336,19 @@ public final class PainlessLookupBuilder {
 
         for (Class<?> typeParameter : typeParameters) {
             if (isValidType(typeParameter) == false) {
-                throw new IllegalArgumentException(
-                    "type parameter ["
-                        + typeToCanonicalTypeName(typeParameter)
-                        + "] "
-                        + "not found for instance binding [["
-                        + targetCanonicalClassName
-                        + "], ["
-                        + methodName
-                        + "], "
-                        + typesToCanonicalTypeNames(typeParameters)
-                        + "]"
-                );
+                throw lookupException(
+                    "type parameter [%s] not found for instance binding [[%s], [%s], %s]",
+                    typeToCanonicalTypeName(typeParameter),
+                    targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
             }
 
             javaTypeParameters.add(typeToJavaType(typeParameter));
         }
 
         if (isValidType(returnType) == false) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] not found for imported method "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] not found for imported method [[%s], [%s], %s]",
+                typeToCanonicalTypeName(returnType), targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         Method javaMethod;
@@ -1902,47 +1356,22 @@ public final class PainlessLookupBuilder {
         try {
             javaMethod = targetClass.getMethod(methodName, javaTypeParameters.toArray(new Class<?>[typeParametersSize]));
         } catch (NoSuchMethodException nsme) {
-            throw new IllegalArgumentException(
-                "instance binding reflection object [["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] not found",
-                nsme
-            );
+            throw lookupException(nsme,
+                "instance binding reflection object [[%s], [%s], %s] not found",
+                targetCanonicalClassName, methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         if (javaMethod.getReturnType() != typeToJavaType(returnType)) {
-            throw new IllegalArgumentException(
-                "return type ["
-                    + typeToCanonicalTypeName(javaMethod.getReturnType())
-                    + "] "
-                    + "does not match the specified returned type ["
-                    + typeToCanonicalTypeName(returnType)
-                    + "] "
-                    + "for instance binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "]"
-            );
+            throw lookupException(
+                "return type [%s] does not match the specified returned type [%s] for instance binding [[%s], [%s], %s]",
+                typeToCanonicalTypeName(javaMethod.getReturnType()), typeToCanonicalTypeName(returnType),
+                targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         if (Modifier.isStatic(javaMethod.getModifiers())) {
-            throw new IllegalArgumentException(
-                "instance binding [["
-                    + targetClass.getCanonicalName()
-                    + "], ["
-                    + methodName
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "] cannot be static"
-            );
+            throw lookupException(
+                "instance binding [[%s], [%s], %s] cannot be static",
+                targetClass.getCanonicalName(), methodName, typesToCanonicalTypeNames(typeParameters));
         }
 
         String painlessMethodKey = buildPainlessMethodKey(methodName, typeParametersSize);
@@ -1968,35 +1397,13 @@ public final class PainlessLookupBuilder {
             newPainlessInstanceBinding = painlessInstanceBindingCache.computeIfAbsent(newPainlessInstanceBinding, key -> key);
             painlessMethodKeysToPainlessInstanceBindings.put(painlessMethodKey.intern(), newPainlessInstanceBinding);
         } else if (newPainlessInstanceBinding.equals(existingPainlessInstanceBinding) == false) {
-            throw new IllegalArgumentException(
-                "cannot add instances bindings with the same name and arity "
-                    + "but do not have equivalent methods "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(returnType)
-                    + "], "
-                    + typesToCanonicalTypeNames(typeParameters)
-                    + "], "
-                    + painlessAnnotations
-                    + " and "
-                    + "[["
-                    + targetCanonicalClassName
-                    + "], "
-                    + "["
-                    + methodName
-                    + "], "
-                    + "["
-                    + typeToCanonicalTypeName(existingPainlessInstanceBinding.returnType())
-                    + "], "
-                    + typesToCanonicalTypeNames(existingPainlessInstanceBinding.typeParameters())
-                    + "], "
-                    + existingPainlessInstanceBinding.annotations()
-            );
+            throw lookupException(
+                "cannot add instances bindings with the same name and arity but do not have equivalent methods "
+                    + "[[%s], [%s], [%s], %s], %s and [[%s], [%s], [%s], %s], %s",
+                targetCanonicalClassName, methodName, typeToCanonicalTypeName(returnType), typesToCanonicalTypeNames(typeParameters),
+                painlessAnnotations,
+                targetCanonicalClassName, methodName, typeToCanonicalTypeName(existingPainlessInstanceBinding.returnType()),
+                typesToCanonicalTypeNames(existingPainlessInstanceBinding.typeParameters()), existingPainlessInstanceBinding.annotations());
         }
     }
 
@@ -2014,20 +1421,20 @@ public final class PainlessLookupBuilder {
 
         if (javaClassNamesToClasses.values().containsAll(canonicalClassNamesToClasses.values()) == false) {
             throw new IllegalArgumentException(
-                "the values of java class names to classes " + "must be a superset of the values of canonical class names to classes"
+                "the values of java class names to classes must be a superset of the values of canonical class names to classes"
             );
         }
 
         if (javaClassNamesToClasses.values().containsAll(classesToPainlessClasses.keySet()) == false) {
             throw new IllegalArgumentException(
-                "the values of java class names to classes " + "must be a superset of the keys of classes to painless classes"
+                "the values of java class names to classes must be a superset of the keys of classes to painless classes"
             );
         }
 
         if (canonicalClassNamesToClasses.values().containsAll(classesToPainlessClasses.keySet()) == false
             || classesToPainlessClasses.keySet().containsAll(canonicalClassNamesToClasses.values()) == false) {
             throw new IllegalArgumentException(
-                "the values of canonical class names to classes " + "must have the same classes as the keys of classes to painless classes"
+                "the values of canonical class names to classes must have the same classes as the keys of classes to painless classes"
             );
         }
 
@@ -2048,7 +1455,7 @@ public final class PainlessLookupBuilder {
         }
 
         for (Class<?> subClass : classesToPainlessClassBuilders.keySet()) {
-            List<Class<?>> superInterfaces = new ArrayList<>(Arrays.asList(subClass.getInterfaces()));
+            Deque<Class<?>> superInterfaces = new ArrayDeque<>(Arrays.asList(subClass.getInterfaces()));
 
             // we check for Object.class as part of the allow listed classes because
             // it is possible for the compiler to work without Object
@@ -2087,7 +1494,7 @@ public final class PainlessLookupBuilder {
             Set<Class<?>> resolvedInterfaces = new HashSet<>();
 
             while (superInterfaces.isEmpty() == false) {
-                Class<?> superInterface = superInterfaces.remove(0);
+                Class<?> superInterface = superInterfaces.removeFirst();
 
                 if (resolvedInterfaces.add(superInterface)) {
                     if (classesToPainlessClassBuilders.containsKey(superInterface)) {
@@ -2119,13 +1526,9 @@ public final class PainlessLookupBuilder {
             }
 
             if (javaMethods.size() != 1 && targetClass.isAnnotationPresent(FunctionalInterface.class)) {
-                throw new IllegalArgumentException(
-                    "class ["
-                        + typeToCanonicalTypeName(targetClass)
-                        + "] "
-                        + "is illegally marked as a FunctionalInterface with java methods "
-                        + javaMethods
-                );
+                throw lookupException(
+                    "class [%s] is illegally marked as a FunctionalInterface with java methods %s",
+                    typeToCanonicalTypeName(targetClass), javaMethods);
             } else if (javaMethods.size() == 1) {
                 java.lang.reflect.Method javaMethod = javaMethods.get(0);
                 String painlessMethodKey = buildPainlessMethodKey(javaMethod.getName(), javaMethod.getParameterCount());
